--- a/furry_frined_chat_cud/build.gradle
+++ b/furry_frined_chat_cud/build.gradle
@@ -33,8 +33,10 @@ dependencies {
 	implementation 'org.springframework.kafka:spring-kafka'
 
 	implementation 'org.webjars:sockjs-client:1.1.2'
+	implementation 'org.webjars:webjars-locator-core'
 	implementation 'org.webjars:stomp-websocket:2.3.3'
-	testImplementation 'org.springframework.kafka:spring-kafka-test'
+	implementation 'org.webjars:bootstrap:3.3.7'
+	implementation 'org.webjars:jquery:3.1.1-1'
 
 	// ETC.
 	implementation 'org.springframework.boot:spring-boot-starter-web'
