--- a/furry_frined_chat_cud/build.gradle
+++ b/furry_frined_chat_cud/build.gradle
@@ -22,6 +22,8 @@ repositories {
 }
 
 dependencies {
+	// JWT 결과
+	implementation 'com.google.code.gson:gson:2.9.1'
 
 	// DB
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
