--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,39 +1,54 @@
-name: Gradle Build Test
+# github repository actions 페이지에 나타날 이름
+name: CI/CD using github actions & docker
 
+# event trigger
+# main이나 develop 브랜치에 push가 되었을 때 실행
 on:
   push:
-    branches-ignore: [ main ]
-  pull_request:
-    branches: [ main, dev ]
+    branches: [ "main" ]
+
+permissions:
+  contents: read
 
 jobs:
-  build:
+  CI-CD:
     runs-on: ubuntu-latest
-
     steps:
+
+      # JDK setting - github actions에서 사용할 JDK 설정 (프로젝트나 AWS의 java 버전과 달라도 무방)
       - uses: actions/checkout@v3
+      - name: Set up JDK 17
+        uses: actions/setup-java@v3
         with:
-          token: ${{ secrets.ACTIONS_TOKEN }}
-          submodules: true
-      - uses: actions/setup-java@v3
-        with:
-          java-version: '11'
+          java-version: '17'
           distribution: 'temurin'
 
-      - name: Run chmod to make gradlew executable
-        run: chmod +x ./gradlew
-
-      - name: Validate Gradle wrapper
-        uses: gradle/wrapper-validation-action@v1
-
-      - name: Setup Gradle
-        uses: gradle/gradle-build-action@v2.4.0
+      # gradle caching - 빌드 시간 향상
+      - name: Gradle Caching
+        uses: actions/cache@v3
         with:
-          gradle-version: release-candidate
-          cache-disabled: true
-          arguments: build --scan
+          path: |
+            ~/.gradle/caches
+            ~/.gradle/wrapper
+          key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties') }}
+          restore-keys: |
+            ${{ runner.os }}-gradle-
+      
+      # 실행 권한 부여
+      - name: Grant execute permission to gradlew
+        run: chmod +x furry_friend_chat_cud/gradlew
 
-      - uses: actions/upload-artifact@v3
-        with:
-          name: build-reports
-          path: build/reports/
+      # gradle build
+      - name: Build with Gradle
+        run: |
+          cd furry_friend_chat_cud
+          ./gradlew build -x test
+
+      # docker build & push to production
+      - name: Docker build & push to prod
+        if: contains(github.ref, 'main')
+        run: |
+          docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
+          cd furry_friend_gateway
+          docker build -f Dockerfile -t ${{ secrets.DOCKER_USERNAME }}/furry-friend-chat-cud .
+          docker push ${{ secrets.DOCKER_USERNAME }}/furry-friend-chat-cud
