--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,7 +5,7 @@ name: CI/CD using github actions & docker
 # main이나 develop 브랜치에 push가 되었을 때 실행
 on:
   push:
-    branches: [ "main" ]
+    branches: [ "main", "dev" ]
 
 permissions:
   contents: read
@@ -42,7 +42,7 @@ jobs:
       - name: Build with Gradle
         run: |
           cd furry_friend_chat_cud
-          ./gradlew build -x test
+          ./gradlew clean build
 
       # docker build & push to production
       - name: Docker build & push to prod
