--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -42,7 +42,7 @@ jobs:
       - name: Build with Gradle
         run: |
           cd furry_friend_chat_cud
-          ./gradlew clean build
+          ./gradlew clean build -x test
 
       # docker build & push to production
       - name: Docker build & push to prod
